Fix for alignment of button text

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -452,6 +452,9 @@
     #help, #align, #top,#selecttoggle {
         height: 35px;
         width: 35px;
+        text-align: center;
+        vertical-align: middle;
+        line-height: 35px;
         border-radius: 25px;
         border: 1px solid #000;
         font-size: 16px;
@@ -464,6 +467,10 @@
         box-shadow: 2px 2px 5px #888888;
         cursor: pointer; cursor: hand;
         z-index: 100;
+    }
+
+    #help, #align {
+        line-height: 30px;
     }
 
     #selecttoggle {
